--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,11 +30,12 @@
 
 
 ###########  POSTGRES ###############
-spring.datasource.url=jdbc:postgresql://postgres:5432/datacatalog
+spring.datasource.url=jdbc:postgresql://datacatalogue_postgres:5432/datacatalog
 spring.datasource.username=andy
 spring.datasource.password=password
 server.port=8086
-server.address=172.28.1.2
+#server.address=http://localhost
+#server.address=172.28.1.2
 #server.address=192.168.1.29
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dbcp2.test-while-idle=true
