changed docker-compose in order to include environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,13 +30,11 @@
 
 
 ###########  POSTGRES ###############
-spring.datasource.url=jdbc:postgresql://datacatalogue_postgres:5432/datacatalog
+spring.datasource.url=jdbc:postgresql://localhost:5432/datacatalog
 spring.datasource.username=andy
 spring.datasource.password=password
 server.port=8086
-#server.address=http://localhost
-#server.address=172.28.1.2
-#server.address=192.168.1.29
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dbcp2.test-while-idle=true
 spring.datasource.dbcp2.validation-query=SELECT 1
@@ -58,13 +56,23 @@ spring.servlet.multipart.maxFileSize=500KB
 spring.servlet.multipart.maxRequestSize=500KB
 
 ################ KEYCLOAK ################
-keycloak.client.clientId=medical-informatics-platform
-keycloak.client.clientSecret=dae83a6b-c769-4186-8383-f0984c6edf05
-keycloak.client.accessTokenUri=http://88.197.53.10:8095/auth/realms/MIP/protocol/openid-connect/token
-keycloak.resource.userInfoUri=http://88.197.53.10:8095/auth/realms/MIP/protocol/openid-connect/userinfo
-keycloak.client.userAuthorizationUri=http://88.197.53.10:8095/auth/realms/MIP/protocol/openid-connect/auth
+#keycloak.client.clientId=medical-informatics-platform
+#keycloak.client.clientSecret=dae83a6b-c769-4186-8383-f0984c6edf05
+#keycloak.client.accessTokenUri=http://88.197.53.10:8095/auth/realms/MIP/protocol/openid-connect/token
+#keycloak.resource.userInfoUri=http://88.197.53.10:8095/auth/realms/MIP/protocol/openid-connect/userinfo
+#keycloak.client.userAuthorizationUri=http://88.197.53.10:8095/auth/realms/MIP/protocol/openid-connect/auth
 #keycloak.client.redirect_uri=http://195.251.252.222:2442/pathologies
+#keycloak.client.redirect_uri=http://localhost:4200/pathologies
+
+################ KEYCLOAK ################
+keycloak.client.clientId=Mipqa
+keycloak.client.clientSecret=a67c7ae8-e8f2-444b-a0a4-bd0b783adb47
+keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/token
+keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/userinfo
+keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/auth
 keycloak.client.redirect_uri=http://localhost:4200/pathologies
+
+
 
 logging.level.org.springframework.security=DEBUG
 spring.main.allow-bean-definition-overriding=true
