--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,18 @@ services:
       - datacatalogue_postgres
     links:
       - datacatalogue_postgres
+    environment:
+      - spring.datasource.url=jdbc:postgresql://datacatalogue_postgres:5432/datacatalog
+      - spring.datasource.username=andy
+      - spring.datasource.password=password
+      - keycloak.client.clientId=Mipqa
+      - keycloak.client.clientSecret=a67c7ae8-e8f2-444b-a0a4-bd0b783adb47
+      - keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/token
+      - keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/userinfo
+      - keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/auth
+      - keycloak.client.redirect_uri=http://localhost:4200/pathologies
     restart: on-failure
+
 
   datacatalogue_frontend:
     build: frontend
@@ -25,9 +36,6 @@ services:
 
   datacatalogue_postgres:
     image: postgres:9.5
-    container_name: postgres
-    ports:
-      - 5432
     environment:
       - POSTGRES_DB=datacatalog
       - POSTGRES_USER=andy
