deployment for release v2.3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,12 @@ services:
       - spring.datasource.url=jdbc:postgresql://datacatalogue_postgres:5432/datacatalog
       - spring.datasource.username=andy
       - spring.datasource.password=password
-      - keycloak.client.clientId=Mipqa
-      - keycloak.client.clientSecret=a67c7ae8-e8f2-444b-a0a4-bd0b783adb47
-      - keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/token
-      - keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/userinfo
-      - keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/auth
+      - keycloak.client.clientId=mipfedqa
+      - keycloak.client.clientSecret=492ddb7d-a7c6-4143-89ae-dbfa6f970aca
+      - keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/token
+      - keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/userinfo
+      - keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/auth
+      - keycloak.client.logout_uri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/logout
       - keycloak.client.redirect_uri=http://localhost:4200/pathologies
     restart: on-failure
 
@@ -43,5 +44,6 @@ services:
 
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
+
 
     restart: on-failure
