--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-      <version>LATEST</version>
+        <version>LATEST</version>
 
         <relativePath/> <!-- lookup parent from repository <version>2.0.4.RELEASE</version>-->
     </parent>
@@ -23,38 +23,47 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <!-- Integration Testing Property-->
+        <testcontainers.version>1.11.2</testcontainers.version>
     </properties>
 
-    <dependencyManagement>
-        <dependencies>
-
-            <!--
-            <dependency>
-                <groupId>io.spring.platform</groupId>
-                <artifactId>platform-bom</artifactId>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            -->
-            <!--
-            <dependency>
-
-                <groupId>org.springframework.cloud</groupId>
-
-                <artifactId>spring-cloud-dependencies</artifactId>
-
-                <version>${spring-cloud.version}</version>
-
-                <type>pom</type>
-
-                <scope>import</scope>
-
-            </dependency>
-            -->
-        </dependencies>
-    </dependencyManagement>
+    <!--    <dependencyManagement>
+            <dependencies>
+    -->
+    <!--
+    <dependency>
+        <groupId>io.spring.platform</groupId>
+        <artifactId>platform-bom</artifactId>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
+    -->
+    <!--
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
+    -->
+    <!--        </dependencies>
+        </dependencyManagement>-->
 
     <dependencies>
+
+        <!--	Test Dependencies		-->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.10.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <!--	End of Test Dependencies		-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -86,13 +95,14 @@
             <version>1.0.6.RELEASE</version>
             <type>pom</type>
         </dependency>
-<!--
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-            <version>LATEST</version>
-        </dependency>
-        -->
+        <!--
+                <dependency>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+                    <version>LATEST</version>
+                </dependency>
+                -->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
@@ -163,6 +173,12 @@
             <artifactId>keycloak-spring-security-adapter</artifactId>
             <version>9.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -170,10 +186,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-              </plugin>
+            </plugin>
 
-          </plugins>
-      </build>
+        </plugins>
+    </build>
 
 
-  </project>
+</project>
