--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,11 +30,13 @@
 
 
 ###########  POSTGRES ###############
-spring.datasource.url=jdbc:postgresql://localhost:5432/datacatalog
+#spring.datasource.url=jdbc:postgresql://localhost:5432/datacatalog
+spring.datasource.url=jdbc:postgresql://datacatalogue_postgres:5432/datacatalog
 spring.datasource.username=andy
 spring.datasource.password=password
 server.port=8086
-
+#server.address=172.16.10.138
+#server.address=192.168.1.29
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.dbcp2.test-while-idle=true
 spring.datasource.dbcp2.validation-query=SELECT 1
@@ -65,14 +67,42 @@ spring.servlet.multipart.maxRequestSize=500KB
 #keycloak.client.redirect_uri=http://localhost:4200/pathologies
 
 ################ KEYCLOAK ################
-keycloak.client.clientId=Mipqa
-keycloak.client.clientSecret=a67c7ae8-e8f2-444b-a0a4-bd0b783adb47
-keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/token
-keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/userinfo
-keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/auth
-keycloak.client.redirect_uri=http://localhost:4200/pathologies
+#keycloak.client.clientId=Mipqa
+#keycloak.client.clientSecret=a67c7ae8-e8f2-444b-a0a4-bd0b783adb47
+#keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/token
+#keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/userinfo
+#keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/auth
+#keycloak.client.logout_uri=https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/logout
+#keycloak.client.redirect_uri=http://195.251.252.222:2442/pathologies
+#keycloak.client.redirect_uri=http://172.16.10.138:8080/datacatalogue
 
 
+################ ###### new keycloak ################
+keycloak.client.clientId=mipfedqa
+keycloak.client.clientSecret=492ddb7d-a7c6-4143-89ae-dbfa6f970aca
+keycloak.client.accessTokenUri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/token
+keycloak.resource.userInfoUri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/userinfo
+keycloak.client.userAuthorizationUri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/auth
+keycloak.client.logout_uri=https://iam.humanbrainproject.eu/auth/realms/MIP/protocol/openid-connect/logout
+#keycloak.client.redirect_uri=http://195.251.252.222:2442/pathologies
+keycloak.client.redirect_uri=http://datacataloguefrontend:4200/datacatalogue
+
+######  qa deplyment
+#AUTH_URI: "https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/auth"
+#      USER_INFO_URI: "https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/userinfo"
+#      TOKEN_URI: "https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/token"
+#      LOGOUT_URI: "https://iam.humanbrainproject.eu/auth/realms/MIPTEST/protocol/openid-connect/logout"
+#
+#
+#
+#client-id: Mipqa
+#
+#client-secret:  a67c7ae8-e8f2-444b-a0a4-bd0b783adb47
+#
+#
+##added because of issues with mip integration and roxy
+#server.servlet.session.cookie.http-only=false
+########################################################
 
 logging.level.org.springframework.security=DEBUG
 spring.main.allow-bean-definition-overriding=true
