newest springboot doesn't allow circular DOA references, added an overide option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -113,3 +113,6 @@ spring.main.allow-bean-definition-overriding=true
 server.error.include-exception=true
 server.error.include-stacktrace=always
 
+## Issues with the latest version of springboot
+spring.main.allow-circular-references=true
+
